# RoboCup-Restaurant

./: .gitignore  README.md  requirements.txt
customer_interest_detection/: CMakeLists.txt  package.xml
customer_interest_detection/scripts/: customer_interest_server.py  pose_detection.py
customer_interest_detection/srv/: Customer_Interest.srv
find_object_3d/: CMakeLists.txt  package.xml  setup.py
find_object_3d/scripts/find_object_3d/: find_object_3d_node.py
hand_detection/: CMakeLists.txt  package.xml  setup.py
hand_detection/launch/: default.rviz  hand_detection_launch.launch
hand_detection/scripts/hand_detection/: hand_detection_node.py  object_detection_class.py  yolo.py
head_control/: CMakeLists.txt  package.xml
head_control/config/: params.yaml
head_control/init_para/: params.yaml
head_control/launch/: head_controll.launch
head_control/src/: head_control.py
object_clustering/: CMakeLists.txt  package.xml
object_clustering/include/object_clustering/: object_clustering.h
object_clustering/src/: object_clustering.cpp
object_clustering/src/applications/: object_clustering_node.cpp
object_detect/: CMakeLists.txt  Object_detection.py  package.xml
object_detect/launch/: customer_interest.launch
object_detect/scripts/: customer_interest_detection.py  object_detection.py  pose_detection.py
object_detect_o3d/: CMakeLists.txt  package.xml
object_grasp/: CMakeLists.txt  CMakelists.txt  grasp.py  grasp_object.py  package.xml
object_grasp/config/: grasp_param.yaml  pick_motions.yaml
object_grasp/launch/: object_grasp.launch
object_grasp/src/: backup.py  findObject.py  getAbs.py  grasp.py  object_grasp.py  spherical_grasps_server.py
object_grasp/srv/: Rel2Abs.srv  grasp.srv
objects_msgs/: CMakeLists.txt  package.xml
objects_msgs/msg/: headPos.msg  objects.msg  single.msg
objects_msgs/srv/: getCoordinate.srv
octomap_launch/: octomap.launch
restaurant/: CMakeLists.txt  package.xml  setup.py
restaurant/config/: fixed_coordinates.yaml  way_points.yaml
restaurant/launch/: restaurant.launch  task_manager.launch  tiago.launch
restaurant/launch/rviz/: tiago.rviz
restaurant/map/: map.pgm  map.yaml
restaurant/scripts/restaurant/: functions.py  run.py  states.py
tiago_pick/: CMakeLists.txt  package.xml
tiago_pick/launch/: pick.launch
wit_ros/: CMakeLists.txt  setup.py
wit_ros/scripts/wit_ros/: wit_node.py
